--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/secretic?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=toor
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.generate-ddl=true
+
+spring.jpa.show-sql=true
