--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,18 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
     implementation 'javax.servlet:jstl'
     implementation 'org.flywaydb:flyway-core'
+
     runtimeOnly 'mysql:mysql-connector-java'
+
+    // WebJars
+    implementation 'org.webjars:webjars-locator-core'
+    implementation 'org.webjars:jquery:3.2.1'
+    implementation 'org.webjars:popper.js:2.0.2'
+    implementation 'org.webjars:sockjs-client:1.1.2'
+    implementation 'org.webjars:stomp-websocket:2.3.3'
+    implementation 'org.webjars:bootstrap:4.3.1'
+    implementation 'org.webjars:font-awesome:4.7.0'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
